# Screenshot_Rust_Project

./: README.md
gui_project/: Cargo.toml
gui_project/src/: credit.rs  hotkeys.rs  main.rs  main_.rs  options.rs  path.rs  screenshot_module.rs
screenshot_project/: Cargo.toml
screenshot_project/src/: main.rs
snap_rust/: Cargo.toml
snap_rust/src/: app.rs  main.rs  main_.rs
snap_rust/src/app/: hotkeys_utils.rs  tool_utils.rs
