[package]
name = "gui_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.0"
egui = "0.24.0"
egui_extras = { version = "0.24.0", features = ["image"] }
env_logger = "0.10.1"
gif = "0.12.0"
glium = "0.33.0"
hotkey = "0.3.1"
image = "0.24.7"
imageproc = "0.23.0"
screenshots = "0.8.5"
