[package]
name = "gui_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_egui = "0.23.0"
eframe = "0.24.0"
egui = "0.24.0"
egui_extras = { version = "0.24.0", features = ["image"] }
env_logger = "0.10.1"
gif = "0.12.0"
hotkey = "0.3.1"
image = "0.24.7"
imageproc = "0.23.0"
native-dialog = "0.7.0"
screenshots = "0.8.5"
